Dockerfile creation + README.md.